<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_popup">

    <TextView
        android:id="@+id/selectSplitsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_splits"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selectSplitsSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_splits_subtitle"
        android:textSize="14sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp"
        android:fadingEdgeLength="30dp"
        android:fadingEdge="vertical"
        android:requiresFadingEdge="vertical"
        tools:listitem="@layout/item_checkbox"
        tools:itemCount="30" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selected"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/selected"
            android:textSize="12sp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectAll"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cornerRadius="16dp"
            android:text="@string/select_all"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:cornerRadius="16dp"
            android:textSize="12sp"
            android:text="@string/confirm_app"
            android:layout_marginStart="16dp"/>
    </LinearLayout>
</LinearLayout>